feat: treat password field in create and list people endpoints
