# src/modules/people/useCases/createPerson/CreatePersonController.ts
@@ -4,10 +4,10 @@ import { CreatePersonService } from './CreatePersonService';
 
 class CreatePersonController {
   async handle(request: Request, response: Response): Promise<Response> {
-    const { name, document } = request.body;
+    const { name, document, password } = request.body;
     const createPersonService = container.resolve(CreatePersonService);
 
-    await createPersonService.execute({ name, document });
+    await createPersonService.execute({ name, document, password });
 
     return response.status(201).json({ name, document });
   }
